# verxlite

./: .gitignore  .pre-commit-config.yaml  AUDIT_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_CODE_REVIEW.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 0001_initial.py
api/verxlite_api/: __init__.py  config.py  deps.py
api/verxlite_api/connectors/: __init__.py  google.py  hubspot.py
api/verxlite_api/db/: __init__.py  base.py  session.py
api/verxlite_api/models/: __init__.py  artifact.py  connection.py  tenant.py  user.py  workflow.py  workflow_run.py  workflow_step.py
api/verxlite_api/observability/: __init__.py  langfuse.py  metrics.py
api/verxlite_api/routes/: __init__.py  artifacts.py  auth.py  connections.py  workflows.py
api/verxlite_api/schemas/: __init__.py  artifact.py  auth.py  connection.py  error.py  tenant.py  user.py  workflow.py  workflow_run.py
api/verxlite_api/services/: __init__.py  workflow_engine.py
api/verxlite_api/utils/: __init__.py  encryption.py  logger.py
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md
scripts/: init_db.py
tests/: conftest.py  test_auth.py  test_encryption.py  test_models.py  test_routes.py  test_services.py  test_workflow_engine.py
web/: .dockerignore  .env.local.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/app/connections/: page.tsx
web/app/dashboard/: page.tsx
web/app/login/: page.tsx
web/app/settings/: page.tsx
web/app/sign-up/[[...sign-up]]/: page.tsx
web/app/workflows/: page.tsx
web/components/ui/: alert.tsx  card.tsx  switch.tsx  table.tsx
web/lib/: api.ts
worker/: .dockerignore  Dockerfile  __init__.py  pyproject.toml  tasks.py
