[tool.poetry]
name = "verxlite-worker"
version = "0.1.0"
description = "Verxlite Worker - Background Jobs"
authors = ["Verxlite Team"]
readme = "README.md"
packages = [{include = "tasks.py"}]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.4"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
langfuse = "^2.1.0"
anthropic = "^0.25.0"
openai = "^1.3.0"
verxlite-api = { path = "../api", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
ruff = "^0.1.14"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
